# air-pollution

./: .gitignore  README.md  hello.py  info.md  pyproject.toml
.devcontainer/: devcontainer.json
app_streamlit/.streamlit/: config.toml  secret.toml
app_streamlit/dashboard/: dashboard.py  data_generation.py  data_transformation.py  plots.py  pollutants.py  rendering.py  sidebar.py  sql_queries.py  test.ipynb
etl/: etl_api.md  etl_explanation.md  extract.py  load.py  run_etl.py  sandbox.py  transform.py
sql/: create_tables.sql  db_schema.md
